# pdfscantools

./: pyproject.toml
src/pdfscantools/: dump.py  inject.py
